# webray

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  webray.theme.ts
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
scripts/: cover.scene.js
src/: app.html  app.pcss  webray.editor.json
src/data/: demo_01.scene.json  demo_02.scene.json  webray.editor.json
src/lib/actions/: file.ts  index.ts  list.ts  render.ts
src/lib/components/data/: WebrayDataView.svelte  WebrayField.svelte  WebrayListDataView.svelte  WebrayProperty.svelte
src/lib/components/data/inputs/: data_select.svelte  f32.svelte  rgb.svelte  str.svelte  string.svelte  u32.svelte  vec3f.svelte
src/lib/components/drawer/: WebrayDrawer.svelte
src/lib/components/fields/: WebrayField.svelte
src/lib/components/layout/: WebrayAppBar.svelte  WebrayFooter.svelte  WebrayImageBar.svelte  WebrayLeftBar.svelte  WebrayRightBar.svelte
src/lib/components/toolbar/: WebrayToolbar.svelte
src/lib/components/ui/: WebrayAppBar.svelte  WebrayFooter.svelte  WebrayIcon.svelte  WebrayIconButton.svelte  WebrayLeftBar.svelte  WebrayRenderBar.svelte  WebrayRightBar.svelte
src/lib/components/window/: WebrayWindow.svelte
src/lib/components/windows/: WebrayWindow.svelte
src/lib/config/: icons.config.ts
src/lib/editor/: index.ts  webray.constants.ts  webray.editor.ts  webray.icons.ts  webray.interfaces.ts  webray.scene.ts
src/lib/scene/: webray.scene.ts
src/lib/store/: binder.store.ts  editor.store.ts  scene.store.ts  writable-derived.store.ts
src/lib/types/: index.ts  materials.types.ts  math.types.ts  misc.types.ts  objects.types.ts
src/lib/utils/: array.extensions.test.ts  array.extensions.ts  object.extensions.test.ts  object.extensions.ts
src/routes/: +layout.svelte  +page.svelte
vexray/: Cargo.toml
vexray-dbg/vexray-dbg.xcodeproj/: project.pbxproj
vexray-dbg/vexray-dbg.xcodeproj/xcshareddata/xcschemes/: vexray-dbg.xcscheme
vexray/src/: lib.rs  main.rs
vexray/src/core/: gpu.rs
vexray/src/kernel/: buffers.rs  config.rs  mod.rs  shapes.rs
vexray/src/renderer/: bindings.rs  buffers.rs  config.rs  kernel.rs  material.rs  mod.rs  scene.rs  shapes.rs  world.rs
vexray/src/scene/: material.rs  mod.rs  shape.rs
vexray/src/shaders/: vexray.wgsl
vexray/src/utils/: color.rs
webray/: Cargo.toml
webray-cli/: Cargo.toml  LICENSE.md
webray-cli/src/: main.rs
webray/src/: lib.rs  main.rs
webray/src/core/: gpu.rs
webray/src/demo/: mod.rs
webray/src/output/: mod.rs  native.rs  wasm.rs
webray/src/renderer/: bindings.rs  buffers.rs  config.rs  kernel.rs  material.rs  mod.rs  scene.rs  shapes.rs
webray/src/scene/: mod.rs  types.rs
webray/src/shaders/: webray.wgsl
webray/src/utils/: color.rs  metrics.rs  mod.rs
wgpu-compute/: Cargo.toml
wgpu-compute/src/: lib.rs  main.rs
wgpu-compute/src/core/: gpu.rs
wgpu-compute/src/shaders/: double.wgsl
wgpu-hello/: Cargo.toml
wgpu-hello/src/: lib.rs  main.rs
wgpu-hello/src/app/: mod.rs
wgpu-hello/src/core/: gpu.rs  mod.rs  window.rs
wgpu-hello/src/shaders/: hello.wgsl
