[package]
name = "webray"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webray"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winit = { version = "0.29", features = ["rwh_05"]} # raw_window_handle_0.5 is required for compat issues should be fixed in next version of wgpu
wgpu = "0.19"
rand = "0.8" # RNG
glam = "0.25" # Math lib
cfg-if = "0.1" # Configuration macros
log = "0.4" # log API
pollster = "0.3" # block on main
bytemuck = "1.14" # byte operations
flume = "0.11" # channels for communication
image = "0.24" # image manupilation
encase = { version = "0.7", features = ["glam"]} # gpu memory layout mappimg utility

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10" # log API implementation

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "ImageData",
    "HtmlImageElement",
]}