[package]
name = "webray"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "WebGPU Powered Ray Tracer"
repository = "https://github.com/BLaZeKiLL/webray"
authors = ["Devashish Lal"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webray"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winit = { version = "0.29", features = ["rwh_05"]} # raw_window_handle_0.5 is required for compat issues should be fixed in next version of wgpu
wgpu = "0.19"
rand = "0.8" # RNG
glam = { version = "0.25", features = ["serde"]} # Math lib

cfg-if = "0.1" # Configuration macros
log = "0.4" # log API

bytemuck = "1.14" # byte operations
encase = { version = "0.7", features = ["glam"]} # gpu memory layout mappimg utility
serde = { version = "1.0", features = ["derive"] } # serialization

flume = "0.11" # channels for communication

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10" # log API implementation
image = "0.24" # image manupilation
pollster = "0.3" # block on main

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3", features = [
    "ImageData",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
]}