[package]
name = "wgpu-compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-compute"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winit = { version = "0.29", features = ["rwh_05"]} # raw_window_handle_0.5 is required for compat issues should be fixed in next version of wgpu
wgpu = "0.18"
rand = "0.8" # RNG
glam = "0.24" # Math lib

log = "0.4" # log API
env_logger = "0.10" # log API implementation
pollster = "0.3" # block on main
bytemuck = "1.14" # byte operations
flume = "0.11" # channels for communication